# hc-re

./: .gitignore  CMakeLists.txt  DEVELOP.md  README.md  clean.sql  cmake_test_discovery_fefcf2f14f.json  conanfile.py  table.sql
apps/cli/: CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt  api-assignments-benchmark.cpp
cmake/: msg.cmake  version.h.in
include/hc/: api-admin.h  archive.h  assignments-submit-param.h  config.h  debug.h  file.h  optional.h  server.h  student.h  submission.h  submit-request.h  teacher.h  time-defs.h  version.h.in  xdg-basedir.h
include/hc/mock/: mock-client.h
include/hc/schema/: Assignment.h  Student.h  Teacher.h
libhc/: assignment.h  config.h  server.cpp  server.h  student.h  submission.h  submit-request.h  time-defs.h  xdg-basedir.h
libhc/schema/: Submission.h
scripts/: clean.sql  config-db.sh  table.sql
src/: CMakeLists.txt  archive.cpp  main.cpp  server.cpp
src/mock/: mock-client.cpp
tests/: CMakeLists.txt  README.md  archive-test.cpp  json-test.cpp  optional-test.cpp  pg.cpp  server-test.cpp
